# Canconv-codex

./: .gitignore  CMakeLists.txt  README.md  README_pipeline.md  README_zh.md  build.sh  cannet_all_results.txt  cannet_evaluation_results.json  evaluate_pansharpening.py  j  presets.json  requirements.txt  results_all.txt  run_pipeline.py  summary_eval_results.json  test_fix.py  test_output.txt  tmp.tar.bz2
.cursor/rules/: mind.mdc  modify.mdc  new.mdc  project.mdc  rule.mdc  run.mdc
.devcontainer/: devcontainer.json
canconv/: __init__.py  losses.py
canconv/config/: defaults.py
canconv/layers/: canconv.py
canconv/layers/kmeans/: __init__.py  __main__.py  cache.py  cluster_center.py  kmeans.py  module.py
canconv/layers/pwac/: CMakeLists.txt  __init__.py  __main__.py  custome_op.py  dispatch_indice.cc  dispatch_indice.h  im2col.cc  im2col.h  main.cc  matmul_attn.cc  matmul_attn.h  matmul_conv.cc  matmul_conv.h  naive_conv.cu  naive_conv.cuh  permute.cc  permute.h  permute_kernel.cu  permute_kernel.cuh  torch_op.py  utils.cc  utils.h
canconv/losses/: __init__.py  combined_loss.py  sam_loss.py
canconv/models/candicnn/: __init__.py  config.py  default.json  model.py
canconv/models/canfusion/: __init__.py  config.py  default.json  model.py
canconv/models/canlagnet/: __init__.py  config.py  model.py
canconv/models/cannet/: __init__.py  config.py  default.json  model.py
canconv/models/dicnn/: __init__.py  config.py  default.json  model.py  variance_scaling_initializer.py
canconv/models/fusionnet/: __init__.py  config.py  default.json  model.py
canconv/models/lagnet/: __init__.py  config.py  default.json  model.py
canconv/scripts/: show.py  summary.py  test.py
canconv/util/: git.py  log.py  seed.py  trainer.py
kmcuda/: .gitignore
kmcuda/.devcontainer/: devcontainer.json
kmcuda/src/: CMakeLists.txt  kmcuda.cc  kmeans.cu  metric_abstraction.h  setup.py  torch.cc
result/reduced_examples(1)/: output_Test(HxWxC)_wv3_data1.mat  output_Test(HxWxC)_wv3_data10.mat  output_Test(HxWxC)_wv3_data11.mat  output_Test(HxWxC)_wv3_data12.mat  output_Test(HxWxC)_wv3_data13.mat  output_Test(HxWxC)_wv3_data14.mat  output_Test(HxWxC)_wv3_data15.mat  output_Test(HxWxC)_wv3_data16.mat  output_Test(HxWxC)_wv3_data17.mat  output_Test(HxWxC)_wv3_data18.mat  output_Test(HxWxC)_wv3_data19.mat  output_Test(HxWxC)_wv3_data2.mat  output_Test(HxWxC)_wv3_data20.mat  output_Test(HxWxC)_wv3_data3.mat  output_Test(HxWxC)_wv3_data4.mat  output_Test(HxWxC)_wv3_data5.mat  output_Test(HxWxC)_wv3_data6.mat  output_Test(HxWxC)_wv3_data7.mat  output_Test(HxWxC)_wv3_data8.mat  output_Test(HxWxC)_wv3_data9.mat
